tests/snapshots/cli_help__check_subcommand_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Check for updates without installing

Usage: distronomicon --repo <REPO> --app <APP> --pattern <PATTERN> --state-directory <STATE_DIRECTORY> check

Options:
  -h, --help  Print help
