tests/snapshots/cli_help__version_subcommand_help.snap
---
source: tests/cli_help.rs
expression: stdout
---
Show currently installed version

Usage: distronomicon --app <APP> version

Options:
  -h, --help  Print help
